base/istio-peer-authentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: default
  namespace: nextcloud
spec:
  mtls:
    mode: STRICT
